--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
 from mcr.microsoft.com/devcontainers/python:1-3.12-bullseye
 
-RUN pip install django twilio langchain openai langchain-community langchain-core
+RUN pip install django twilio langchain openai langchain-community langchain-core langgraph langchain_openai python-decouple
